--- a/geofencing/templates/geofencing/index.html
+++ b/geofencing/templates/geofencing/index.html
@@ -4,22 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geofencing System</title>
-    {% load static %} <!-- For static files -->
-    <!-- <link rel="stylesheet" href="{% static 'main.css' %}"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="icon" href="{% static 'image/marker.png' %}">
 </head>
 <body>
+    <section class="h-100 gradient-form" style="background-color: #eee;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-10">
+              <div class="card rounded-3 text-black">
+                <div class="row g-0">
+                  <div class="col-lg-6">
+                    <div class="card-body p-md-5 mx-md-4">
+      
+                      <div class="text-center">
+                        <img src="{% static 'image/marker.png' %}"
+                          style="width: 185px;" alt="logo">
+                        <h4 class="mt-1 mb-5 pb-1">Geofencing System</h4>
+                        <p id="status">Checking location...</p>
+                      </div>
+      
+                        <h6>Current Date and Time: </h6>
+                        <p id="datetime">Loading...</p>
+
+                    
+
+                        <div class="text-center pt-1 mb-5 pb-1">
+                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" id="checkinBtn" disabled >Check-in</button>
+                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" id="checkoutBtn" disabled >Check-Out</button>
+                          </div>
+
+      
+                        
+                         
+      
+                    </div>
+                  </div>
+                  <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                    <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                      <h4 class="mb-4">User Info</h4>
+                      <p>Name:</p>
+                      <p>User Id:</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     <div class="container">
-        <h1>Geofencing System</h1>
-        <p id="status">Checking location...</p>
-
-        <button id="checkinBtn" disabled>Check-In</button>
-        <button id="checkoutBtn" disabled>Check-Out</button>
-
-        <!-- Hidden input for CSRF Token -->
+       
         <input type="hidden" id="csrf_token" value="{{ csrf_token }}">
     </div>
 
     <script>
+        function displayDateTime() {
+         const now = new Date(); 
+         const options = { 
+         weekday: 'long', 
+         year: 'numeric', 
+         month: 'long', 
+         day: 'numeric', 
+         hour: '2-digit', 
+         minute: '2-digit', 
+         second: '2-digit' 
+        };
+       document.getElementById('datetime').textContent = now.toLocaleString('en-US', options);
+     }
+
+
+     setInterval(displayDateTime, 1000);
+
+
+       displayDateTime();
         // Function to get CSRF Token from the hidden input field
         const csrfToken = document.getElementById('csrf_token').value;
 
@@ -106,5 +166,6 @@ document.getElementById("checkoutBtn").onclick = () => {
 };
 
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
