Changes have been made

--- a/geofencing/templates/geofencing/index.html
+++ b/geofencing/templates/geofencing/index.html
@@ -48,8 +48,8 @@
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                     <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                       <h4 class="mb-4">User Info</h4>
-                      <p>Name: {{user.username}}</p>
-                      <p>User Id: {{user.id}}</p>
+                      <p>UserName : {{user.username}}</p>
+                      <p>UserId : {{user.id}}</p>
                       <div class="text-center pt-1 mb-5 pb-1" style="margin-top: 20px;">
                         <button data-mdb-button-init data-mdb-ripple-init class="btn btn-danger btn-block fa-lg gradient-custom-2 mb-3" type="button" id="logoutBtn">Logout</button>
                       </div>
