--- a/geofencing/static/css/main.css
+++ b/geofencing/static/css/main.css
@@ -1,4 +1,3 @@
-
 .gradient-custom-2 {
     /* fallback for old browsers */
     background: #fccb90;
@@ -8,16 +7,24 @@
     
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-    }
-    
-    @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .gradient-form {
-    height: 100vh !important;
+        height: 100vh !important;
     }
-    }
-    @media (min-width: 769px) {
+}
+
+@media (min-width: 769px) {
     .gradient-custom-2 {
-    border-top-right-radius: .3rem;
-    border-bottom-right-radius: .3rem;
+        border-top-right-radius: .3rem;
+        border-bottom-right-radius: .3rem;
     }
-    }
+}
+
+/* Add styles for disabled buttons */
+button:disabled {
+    background-color: #cccccc !important; /* Light gray color for disabled buttons */
+    color: #666666 !important;           /* Darker gray text color */
+    cursor: not-allowed !important;      /* Change cursor to indicate disabled state */
+}
